Bug 256954 - konqueror first click on link after Google search in searchbar is ignored
Summary: konqueror first click on link after Google search in searchbar is ignored
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: searchbarplugin (other bugs)
Version First Reported In: 4.5.4
Platform: Unlisted Binaries Linux
: NOR minor
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-15 07:06 UTC by Roman Fietze
Modified: 2011-07-10 08:16 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Fietze 2010-11-15 07:06:15 UTC
Version:           unspecified (using KDE 4.5.3) 
OS:                Linux

When I do any search using Google and get a list of responses, the first click or Ctrl-click on a link in the result list is ignored by konqueror.

I can reproduce that repeatedly. I could not yet detect that behavior in other situations, say other web pages.

The application version is 4.5.3, this version isn't offered in Bugzilla yet.


Reproducible: Always
Comment 1 Samuel Brack 2011-01-01 18:18:49 UTC
I can't reproduce this in 4.5.4 using google.de and google.com (English version). Does this bug still exist in 4.5.4 and can somebody reproduce this? Roman, have you seen this error again?
I think that could've been Google's error because the bug seemed to occur only on that site.
If the bug can't be reproduced this report can be closed.
Comment 2 Roman Fietze 2011-01-01 20:22:33 UTC
(In reply to comment #1)

> I can't reproduce this in 4.5.4 using google.de and google.com

Triggered by your comment I did some further testing. I detected, using Version 4.5.4 "release 9", that this only happens when using the search bar of konqueror.

When I open www.google.(de|com) and search using the text field there, I cannot see that error.
Comment 3 Samuel Brack 2011-01-01 21:00:48 UTC
Thanks for your feedback, I'll assign the bug to "searchbarplugin" since it seems related to this.
Comment 4 Dawit Alemayehu 2011-06-05 21:50:17 UTC
Git commit 8db60a2fe40fc00cbf2774afd3c74e8f6ea03c02 by Dawit Alemayehu.
Committed on 03/06/2011 at 19:24.
Pushed by adawit into branch 'KDE/4.6'.

Do not emit textEdited when user scrolls through the popup completion list.
Instead emit it when the user selects an item from the list.

BUG: 256954
FIXED-IN: 4.6.5
REVIEW: 101498

M  +2    -1    kdeui/widgets/klineedit.cpp     

http://commits.kde.org/kdelibs/8db60a2fe40fc00cbf2774afd3c74e8f6ea03c02
Comment 5 Dawit Alemayehu 2011-06-05 21:50:58 UTC
Git commit 26c378fe5cf0da01b64177470ddddd0eb51add12 by Dawit Alemayehu.
Committed on 03/06/2011 at 19:24.
Pushed by adawit into branch 'master'.

Do not emit textEdited when user scrolls through the popup completion list.
Instead emit it when the user selects an item from the list.

BUG: 256954
FIXED-IN: 4.6.5
REVIEW: 101498

(cherry picked from commit 8db60a2fe40fc00cbf2774afd3c74e8f6ea03c02)

M  +2    -1    kdeui/widgets/klineedit.cpp     

http://commits.kde.org/kdelibs/26c378fe5cf0da01b64177470ddddd0eb51add12
Comment 6 Christoph Feck 2011-06-06 18:40:35 UTC
Since I did not find any other relevant changes, I assue this commit breaks completion in web forms. I have a hard time adding a comment to WordPress blogs because after completion and tabbing to next field, the contents of the previous field is reset to the letters that I typed before completing the content.
Comment 7 Dawit Alemayehu 2011-06-06 20:08:06 UTC
(In reply to comment #6)
> Since I did not find any other relevant changes, I assue this commit breaks
> completion in web forms. I have a hard time adding a comment to WordPress blogs
> because after completion and tabbing to next field, the contents of the
> previous field is reset to the letters that I typed before completing the
> content.

Gosh! khtml is just a thorn on my side! It is just out of control. The double posting issue is still keeping slave-on-hold from working correctly in all cases and now this. Well in this case, I am not going to revert the commit because the previous KLineEdit behavior was completely incorrect. I guess I will have to dig through khtml and find a fix.
Comment 8 Samuel Brack 2011-06-06 22:22:55 UTC
So then I'm reopening this issue because of being not resolved. Thanks for your feedback, Christoph.
Comment 9 Dawit Alemayehu 2011-06-06 23:28:02 UTC
(In reply to comment #8)
> So then I'm reopening this issue because of being not resolved. Thanks for your
> feedback, Christoph.

Ahh... sorry but the fact that khtml does something weird has nothing to do with this bug report. This issue has been fixed. The issue Christoph raised is completely different and requires a separate ticket since it is in another module.
Comment 10 Andrea Iacovitti 2011-07-10 08:16:36 UTC
Opened a separate bug report for issue mentioned in comment 6
https://bugs.kde.org/show_bug.cgi?id=277457