Do not emit textEdited when user scrolls through the popup completion list. Instead emit it when the user selects an item from the list.

BUG: 256954
FIXED-IN: 4.6.5
REVIEW: 101498